--- a/index.html
+++ b/index.html
@@ -765,6 +765,8 @@ Error message and password prompt
 
 <li>ראשל</li>
 
+<li>רביזיה במטבח</li>
+
 <li>רוז'ה</li>
 
 <li>רוטב בשאמל</li>
@@ -8688,7 +8690,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[שה פניס]] [[שערות לאחור]] סולטנה צזיקי [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[רביזיה במטבח]] [[שה פניס]] [[שערות לאחור]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8708,7 +8710,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170821185149859" title="$:/temp/search">
+<div created="20161023184814872" modified="20170823124652717" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13642,7 +13644,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170820183837636" modified="20170822182605621" tags="סולטנה" title="צזיקי">
+<div created="20170820183837636" modified="20170822191555848" tags="סולטנה" title="צזיקי">
 <pre>[img[pictures/tzaziki.jpg]]
 
 !!![[סולטנה]]:
@@ -13654,7 +13656,7 @@ Fapina''
 * קוצצים שום אחד דק
 * מוזגים מעל יוגורט סמיך לא חמוץ - 2 כוסות
 * מתבלים עם מלח גס ופלפל שחור
-* מפזרים מעל חופן שמיר קצוץ דק וכף זרעי קימל (אם אוהבים)
+* מפזרים מעל כף זרעי קימל (אם אוהבים)
 * מערבבים בעזרת שתי כפות מלמטה למעלה, ומבחוץ פנימה בתנועות עדינות, זאת אומרת בתנועה מעגלית מהחוץ למרכז, כך שכלום לא ימעך
 *מקשטים בכמה טיפות שמן זית, ומגישים
 
@@ -13832,6 +13834,21 @@ Fapina''
 !!![[גורה]]:
 
 ראשל היא בתה הצעירה של [[ז'נבייב]], היא ילידת שנת 2000, היא תיכוניסטית במגמת אומנות פלסטית, והיא [[ג'וקרית|ילדים חד הוריים]] אמיתית.</pre>
+</div>
+<div created="20170822191101898" modified="20170824135959607" tags="[[המטבח על פי ז'נבייב]]" title="רביזיה במטבח">
+<pre>[img[pictures/revisia-bamitbach.jpg]]
+
+!!![[ז'נבייב]]:
+
+
+
+כנראה שדברים באמת באים בצרורות.
+[[המכתב מדןדן|שה פניס]], הגיע בדיוק בזמן מבחינתי. רציתי שינוי.
+ [[הסלואו פוד|https://en.wikipedia.org/wiki/Slow_Food]] תפס אותי, כי יותר מכל קשה לי הלחץ של הסרוויס. ומבחינת הסטייל - ונכון שקוסקוס הוא למעשה סלואו פוד, אבל [[המטבח הקליפורני|https://en.wikipedia.org/wiki/California_cuisine]] דיבר אלי מבחינת החומרים. בנוסף לאלה - מתפנה חנות ליד הקוסקוס, כך שאוכל להגדיל את המקום, וזהו, החלטתי. בעוד חודש אסגור את המסעדה לשבועיים עד חודש. נתכנן מטבח נח יותר לצורת העבודה החדשה. אשאיר שולחנות ללא הגשה, ואפתח מעדניית סלואו פוד בהשראת המטבח הקליפורני. מן &quot;אוסף פרטי&quot;. כמובן שיהיה קוסקוס. יש לי את [[סוניה]], את [[סולטנה]], את [[אווה]], את כל הילדים - והשיא, [[אירי]] [[ויויו|יויו]] החליטו להכין מרק עוף עם קניידעלך.
+
+
+
+</pre>
 </div>
 <div created="20161115145921007" modified="20170417190658722" tags="[[אחות כהן]]" title="רוז'ה">
 <pre>[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
@@ -14179,7 +14196,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170821183123825" modified="20170822183521386" tags="[[דןדן נסע]]" title="שה פניס">
+<div created="20170821183123825" modified="20170824135557111" tags="[[דןדן נסע]]" title="שה פניס">
 <pre>!!![[יויו]]:
 
 כן - [[הוא|דןדן]] כתב לנו עוד מכתב (אוגוסט 2017), וגם אותו אני מעתיק לכאן:
@@ -14192,15 +14209,13 @@ Fapina''
 נכנסנו הבייתה לפני שעה, אחרי שלושה ימים בברקלי, ואני משולהב כל כך וחייב לספר לכם:
 
 דודי מו חוגג יום הולדת 60, ולכבוד הארוע, ילדיו, בני דודי, בן (22) ונטלי (20), החליטו להוציא אותו (ואותי) מהבית.
-בן הגיע עם המכונית שלו, הם לקחו ארבעה חדרים בבית מלון מפנק. טיילנו והסתובבנו, והשיא מבחינת כולנו היה לאכול [[Chez Panisse|https://en.wikipedia.org/wiki/Chez_Panisse]].
-
-מסעדה שהקימה [[אליס ווטרס|https://en.wikipedia.org/wiki/Alice_Waters#Slow_Food]]
+בן הגיע עם המכונית שלו, הם לקחו ארבעה חדרים בבית מלון מפנק. טיילנו והסתובבנו, והשיא מבחינת כולנו היה לאכול [[Chez Panisse|https://en.wikipedia.org/wiki/Chez_Panisse]]. מסעדה שהקימה [[אליס ווטרס|https://en.wikipedia.org/wiki/Alice_Waters#Slow_Food]]
 
 אכלנו יום אחד [[במסעדה|http://www.chezpanisse.com/menus/restaurant-menu/]], ויום אחד [[בבית קפה|http://www.chezpanisse.com/menus/cafe-menu/]]. 
 
 חומרי הגלם שם - הדגים ופירות הים, הבשר, הירקות והפרות - פשוט טעימים. כל כך התרגשתי, הרגשתי חלק מעולם הקולינריה בזכותכם. הגישה של המקום הזה הזכירה לי את [[הקוסקוס]], ובעיקר את [[ז'נבייב המתוקה|המטבח על פי ז'נבייב]]. 
 
-לא הכרתי את המושג [[slow food|https://en.wikipedia.org/wiki/Slow_Food]], לא התעניינתי [[במטבח קליפורני|https://en.wikipedia.org/wiki/California_cuisine]], זה הכל היה הפתעה מוחלטת בשבילי, אבל פתאום שם, בעיקר כשראיתי את ההואי במטבח והאוכל הכיפי, חשבתי עליכם. על השיחות שלנו במטבח. על הדיבורים שלכם על אוכל.
+לא הכרתי את המושג [[slow food|https://en.wikipedia.org/wiki/Slow_Food]], לא התעניינתי [[במטבח קליפורני|https://en.wikipedia.org/wiki/California_cuisine]], זה הכל היה הפתעה מוחלטת בשבילי, אבל פתאום שם, בעיקר כשראיתי את ההווי במטבח והאוכל הכיפי, חשבתי עליכם. על השיחות שלנו במטבח. על הדיבורים שלכם על אוכל.
 
 מתגעגע ואוהב
 
@@ -14381,12 +14396,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170820121344664" modified="20170821173524724" tags="[[המטבח על פי ז'נבייב]]" title="שערות לאחור">
+<div created="20170820121344664" modified="20170822191044857" tags="[[המטבח על פי ז'נבייב]]" title="שערות לאחור">
 <pre>[img[pictures/searot-leachor.jpg]]
 
 !!![[ז'נבייב]]:
 
-בנובמבר הקרוב ימלאו לי 46, ובעידודו של [[ג'וזף|ג'וזף אברואה]], החלטתי לעשות רביזיה במטבח.
+בנובמבר הקרוב ימלאו לי 46, ובעידודו של [[ג'וזף|ג'וזף אברואה]], החלטתי לעשות [[רביזיה במטבח]].
 
 ראשית - להביא מבשלת נוספת, ולעבוד פחות, ודבר שני לעשות שיפוץ קטן גם למסעדה וגם לתפריט.
 
