--- a/index.html
+++ b/index.html
@@ -421,6 +421,8 @@ Error message and password prompt
 
 <li>גרטן תפו&quot;א</li>
 
+<li>דבקה</li>
+
 <li>דיוויד בואי</li>
 
 <li>דיור מוגז</li>
@@ -8698,7 +8700,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[רביזיה במטבח]] [[אני מחנה]] [[דייויד צ'ייס]] [[ג'יימס גנדולפיני]] הסופרנוס [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דייויד צ'ייס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8718,7 +8720,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170904133803592" title="$:/temp/search">
+<div created="20161023184814872" modified="20170905124203922" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10802,6 +10804,15 @@ Is where I want to be
 
 </pre>
 </div>
+<div created="20170905124350189" modified="20170905135655965" tags="[[אירי טוענת]]" title="דבקה">
+<pre>[img[pictures/dabke.jpg]]
+
+!!![[אירי]]:
+
+גם אם דבק [[בדבקה|https://he.wikipedia.org/wiki/%D7%93%D7%91%D7%A7%D7%94]] חיידק הלאומנות בחלק מהמקומות - במקורה, היא ריקוד עם שמח, בו אוחזים ידיים במעגל או בשורות, ורוקדים בקצב של 4/4, ממש כמו [[בהורההורה]].
+
+</pre>
+</div>
 <div created="20170105154405192" modified="20170602183812805" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
 
@@ -10829,7 +10840,7 @@ Is where I want to be
 
 דיור מוגז [[שבמצפה ראשית|מצפה ראשית]], הוא הפנינה, שהגיעה תודות לצינור של [[אסדת טתיס|ים טתיס]].</pre>
 </div>
-<div created="20170829174937405" modified="20170905123602325" tags="[[אחיות חוץ]]" title="דייויד צ'ייס">
+<div created="20170829174937405" modified="20170906174856334" tags="[[אחיות חוץ]]" title="דייויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
 
 !!![[יויו]]:
@@ -10841,7 +10852,7 @@ Is where I want to be
 different tastes, but there were things we both love: family, work, people in all their imperfection, food, alcohol, talking, rage and a desire to bring the whole structure crashing down.
 
 
-וכן, רק לא מזמן הבנתי [[שדייויד צ'ייס|http://www.imdb.com/name/nm0153740/]], שיצר את [[הסופרנוס]], הוא אותו דייויד צ'ייס [מnחשיפה לצפון|חשיפה לצפון]].
+וכן, רק לא מזמן הבנתי [[שדייויד צ'ייס|http://www.imdb.com/name/nm0153740/]], שיצר את [[הסופרנוס]], הוא אותו דייויד צ'ייס [[חשיפה לצפון|חשיפה לצפון]].
 
 מודים לך דייויד. 
 
@@ -14733,7 +14744,7 @@ Fapina''
 
 //המשך יבוא//</pre>
 </div>
-<div created="20170806142815034" modified="20170807163638876" tags="[[אירי טוענת]]" title="תרגיל לבלטה">
+<div created="20170806142815034" modified="20170905124335018" tags="[[אירי טוענת]]" title="תרגיל לבלטה">
 <pre>[img[pictures/targil-lebalata.jpg]]
 
 !!![[אירי]]:
@@ -14748,7 +14759,7 @@ Fapina''
 
 אפשר עם  או בלי מוזיקה, כפות הרגליים עומדות כל אחת על בלטה, מקבילות זו לזו. הברכיים כפופות מעט ורכות, מפרקי הירך רכים, [[המותנית|צווארים]]. מניחים לצוואר להיות חופשי ומתחילים שני סיבובים, אחד כשרגל ימין נעה קדימה וחוזרת, הצידה ימינה וחוזרת, אחורה וחוזרת, הצידה ימינה וחוזרת (8 פעמות). אחר כך ובאותו אופן ברגל שמאל לצד שמאל.
 
-קל לזכור את התרגיל בדומה לריקודי העם של פעם, כלומר - כמו בדבקה או [[בהורה|הורה]], הטקסט ברור, וכל שנותר הוא להתנועע ולאלתר תוך כדי תנועה.
+קל לזכור את התרגיל בדומה לריקודי העם של פעם, כלומר - כמו [[בדבקה|דבקה]] או [[בהורה|הורה]], הטקסט ברור, וכל שנותר הוא להתנועע ולאלתר תוך כדי תנועה.
 
 כן או לא להעביר את המשקל לרגל המתנועעת, שינוי המהירות, הוספה של תנועת הידיים. כשהטקסט קצר וברור, אפשר להתעמק בתנועה, במקצב, בקצב, בחשיבה התנועתית ועוד.
 
