--- a/index.html
+++ b/index.html
@@ -10840,7 +10840,7 @@ Is where I want to be
 
 דיור מוגז [[שבמצפה ראשית|מצפה ראשית]], הוא הפנינה, שהגיעה תודות לצינור של [[אסדת טתיס|ים טתיס]].</pre>
 </div>
-<div created="20170829174937405" modified="20170906174856334" tags="[[אחיות חוץ]]" title="דייויד צ'ייס">
+<div created="20170829174937405" modified="20170906175656381" tags="[[אחיות חוץ]]" title="דייויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
 
 !!![[יויו]]:
@@ -10848,11 +10848,12 @@ Is where I want to be
 [[בהלוויה|https://www.usatoday.com/story/life/tv/2013/06/27/james-gandolfini-funeral-sopranos-star/2463931/]] של [[ג'יימס גנדולפיני]],  דייויד צ'ייס אמר, שלמרות שהוא היה מבוגר ממנו ב-16 שנה:
  
 
+@@.ltr
  I always felt we were brothers. We had
 different tastes, but there were things we both love: family, work, people in all their imperfection, food, alcohol, talking, rage and a desire to bring the whole structure crashing down.
+@@
 
-
-וכן, רק לא מזמן הבנתי [[שדייויד צ'ייס|http://www.imdb.com/name/nm0153740/]], שיצר את [[הסופרנוס]], הוא אותו דייויד צ'ייס [[חשיפה לצפון|חשיפה לצפון]].
+וכן, רק לא מזמן הבנתי [[שדייויד צ'ייס|http://www.imdb.com/name/nm0153740/]], שיצר את [[הסופרנוס]], הוא אותו דייויד צ'ייס של [[חשיפה לצפון|חשיפה לצפון]].
 
 מודים לך דייויד. 
 
