--- a/index.html
+++ b/index.html
@@ -8700,7 +8700,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דייויד צ'ייס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="דבקה [[הדוד האמיתי]] [[דייויד צ'ייס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8720,7 +8720,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170905124203922" title="$:/temp/search">
+<div created="20161023184814872" modified="20170906181034311" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10804,12 +10804,12 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170905124350189" modified="20170905135655965" tags="[[אירי טוענת]]" title="דבקה">
+<div created="20170905124350189" modified="20170906181138891" tags="[[אירי טוענת]]" title="דבקה">
 <pre>[img[pictures/dabke.jpg]]
 
 !!![[אירי]]:
 
-גם אם דבק [[בדבקה|https://he.wikipedia.org/wiki/%D7%93%D7%91%D7%A7%D7%94]] חיידק הלאומנות בחלק מהמקומות - במקורה, היא ריקוד עם שמח, בו אוחזים ידיים במעגל או בשורות, ורוקדים בקצב של 4/4, ממש כמו [[בהורההורה]].
+גם אם דבק [[בדבקה|https://he.wikipedia.org/wiki/%D7%93%D7%91%D7%A7%D7%94]] חיידק הלאומנות בחלק מהמקומות - במקורה, היא ריקוד עם שמח, בו אוחזים ידיים במעגל או בשורות, ורוקדים בקצב של 4/4, ממש כמו [[בהורה|הורה]].
 
 </pre>
 </div>
