--- a/index.html
+++ b/index.html
@@ -671,6 +671,8 @@ Error message and password prompt
 
 <li>סולטנה</li>
 
+<li>סולטנה ויסמין</li>
+
 <li>סוניה</li>
 
 <li>סוסים לדבק</li>
@@ -704,6 +706,8 @@ Error message and password prompt
 <li>עוגיות קימל</li>
 
 <li>עוגת מוקה</li>
+
+<li>עוגת סולת</li>
 
 <li>עוגת פרג שוקולד</li>
 
@@ -8700,7 +8704,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="דבקה [[הדוד האמיתי]] [[דייויד צ'ייס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="סולטנה [[סולטנה ויסמין]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8720,7 +8724,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170906181034311" title="$:/temp/search">
+<div created="20161023184814872" modified="20170907181236561" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9000,14 +9004,14 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20170814133039623" tags="[[המטבח על פי ז'נבייב]]" title="אהבה">
+<div created="20170112164936113" modified="20170907181307779" tags="[[המטבח על פי ז'נבייב]]" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
 
 אהבה [[היא רגש|https://www.youtube.com/watch?v=YVQvOvlEcDM&amp;list=PL0gkxYg1JKPX0xeyU9BgFp3A-AqgmlBqC&amp;index=2]]
 
-מרגישים אותה.
+
 
 אני אוהבת הרבה דברים. אני אוהבת אוכל. אני אוהבת את המטבח. אני אוהבת את כלי המטבח. את משטחי העבודה. אני אוהבת לנוע במטבח. אני אוהבת להזמין חומרי גלם ולסדר אותם. אני אוהבת להחליט מה יהיה קצת שונה היום מאתמול. אני אוהבת לארגן את המטבח לקראת הבישול, מה שיויו קורא [[מיזונפלציה]].  אני אוהבת לחתוך. אני אוהבת לבשל. אני אוהבת [[ריחות]]. אני אוהבת להסתכל על הכל. לחשוב על הדברים. לתכנן את העבודה. אני אוהבת את העובדים, ואני אוהבת את המסעדה שלי. אני אוהבת יצורים חיים מן הצומח ומן החי, אבל אני גם אוהבת עצמים. אני אוהבת [[מילים|כשאמרו קסטה]]. אני אוהבת את צמד המילים: שמות עצם. כמובן שאני יכולה להמשיך עוד ועוד לכתוב מה אני אוהבת ועוד לא התחלתי עם בנותיי ואמי וג'וזף והאחיות כהן bien sur.
 
@@ -10804,12 +10808,12 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170905124350189" modified="20170906181138891" tags="[[אירי טוענת]]" title="דבקה">
+<div created="20170905124350189" modified="20170907154115299" tags="[[אירי טוענת]]" title="דבקה">
 <pre>[img[pictures/dabke.jpg]]
 
 !!![[אירי]]:
 
-גם אם דבק [[בדבקה|https://he.wikipedia.org/wiki/%D7%93%D7%91%D7%A7%D7%94]] חיידק הלאומנות בחלק מהמקומות - במקורה, היא ריקוד עם שמח, בו אוחזים ידיים במעגל או בשורות, ורוקדים בקצב של 4/4, ממש כמו [[בהורה|הורה]].
+גם אם דבק [[בדבקה|https://he.wikipedia.org/wiki/%D7%93%D7%91%D7%A7%D7%94]] חיידק הלאומנות בחלק מהמקומות - במקורה, היא ריקוד עם, בו אוחזים ידיים במעגל או בשורות, ורוקדים בקצב של 4/4, ממש כמו [[בהורה|הורה]].
 
 </pre>
 </div>
@@ -12612,6 +12616,25 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[סולטנה]]&quot;&gt;&gt;</pre>
 </div>
+<div created="20170908140800978" modified="20170908165437244" tags="סולטנה" title="סולטנה ויסמין">
+<pre>
+[img[pictures/sultana-veyasmin.jpg]]
+
+!!![[יויו]]:
+
+בתחילת השבוע, נכנסה סולטנה  [[לקוסקוס|הקוסקוס]], על פניה חיוך מאושר, בידיה תבנית ואמרה בקול צוהל:
+
+&quot;לקמיל, הצעיר שלי, נולדה אתמול תינוקת יפהפיה. הם קראו לה יסמין, ואני סבתא&quot; 
+
+צהלנו ורקדנו ושרנו ואכלנו [[מעוגת הסולת|עוגת סולת]] המעולה
+
+
+
+
+
+
+</pre>
+</div>
 <div created="20170331195529688" modified="20170620150556736" tags="[[אחות כהן]]" title="סוניה">
 <pre>[img[pictures/sonya.jpg]]
 
@@ -13006,6 +13029,51 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 6. לקישוט גוררים פרורי שוקולד מעל העוגה
 
 7. עוטפים ומכניסים למקרר לשש שעות לפחות עד להגשה
+
+</pre>
+</div>
+<div created="20170908141536225" modified="20170908145320805" tags="סולטנה [[חיות אוכל]]" title="עוגת סולת">
+<pre>
+[img[pictures/ugat-solet.jpg]]
+
+
+
+__חומרים לעוגה__
+
+* 4 ביצים
+* כוס סוכר
+* כוס חמאה מומסת
+* 2 ורבע כוסות סולת
+* 50  גרם קוקוס
+* 50גרם שקדים טחונים
+* גביע שמנת חמוצה
+* כוס וחצי קמח לבן
+* כפית אבקת אפייה
+* שקית סוכר וניל
+__
+חומרים לסירופ__
+
+* כוס ושליש סוכר
+* כוס מים
+רום/תמצית וניל/מי ורדים
+
+__אופן ההכנה:__
+
+1. לחמם תנור ל 170 מעלות.
+
+2. בקערת המיקסר לערבל את הביצים עם הסוכר עד לכדי תערובת תפוחה, בהירה ומבריקה.
+
+3. לקפל פנימה בעזרת מטרפה ידנית את כל שאר חומרי העוגה.
+
+4. למזוג לתבנית מלבנית או שתי תבניות אנגליש קייק ולאפות כארבעים דקות עד 55 או לבדוק עם קיסם.
+
+5. כאשר העוגה בתנור רתיחים את חומרי הסירופ, ומבשלים  2-3 דקות נוספות.
+
+6. כשהעוגה יוצאת מן התנור – מוזגים עליה את הסירופ.
+
+7. מקשטים בפתיתי קוקוס ושקדים קלויים.
+
+
 
 </pre>
 </div>
@@ -14442,7 +14510,7 @@ Fapina''
 
 והיה מעולה</pre>
 </div>
-<div created="20161206222443036" modified="20170606171349561" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
+<div created="20161206222443036" modified="20170907165207735" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
 <pre>[img[pictures/shitat-alexander.jpg]]
 
 !!![[אירי]]:
@@ -14450,7 +14518,7 @@ Fapina''
 
 בנערותי סבלתי מכאבי גב חזקים, שהתבררו כעקמת, שנבעה מצמיחה מהירה לגובה. בין גיל 14 ל-15 נוספו  12 סנטימטרים לגובהי, שנעצר ב- 172 ס&quot;מ. אמי לקחה אותי לכל סוגי המרפאים והרופאים, וכך נתקלתי לראשונה [[בשיטת אלכסנדר|https://he.wikipedia.org/wiki/%D7%A9%D7%99%D7%98%D7%AA_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]].  
 
-[[אלכסנדר|פ.מ.אלכסנדר]]  שלקה בקולו גילה, שהדבר נובע מליקוי בהתנהגותו הגופנית והנפשית. 
+[[אלכסנדר|פ.מ.אלכסנדר]], שלקה בקולו, גילה שהדבר נובע מליקוי בהתנהגותו הגופנית והנפשית. 
 
 די מהר הוחלט שאצטרך ללבוש סד שיישר את גבי ונטשתי גם את האלכסנדר. בסוף השרות הצבאי הכאבים חזרו, החלטתי לנסות שוב את השיטה, ומאז אני הולכת כל שבוע לשיעור, ואף מניחה את הגב מידי יום בעצמי. לקח לי לפחות שנה עד שהצלחתי להבין את שלושת המשפטים הבסיסיים עליהם מושתתת העבודה כולה:
 
@@ -14745,7 +14813,7 @@ Fapina''
 
 //המשך יבוא//</pre>
 </div>
-<div created="20170806142815034" modified="20170905124335018" tags="[[אירי טוענת]]" title="תרגיל לבלטה">
+<div created="20170806142815034" modified="20170907152754710" tags="[[אירי טוענת]]" title="תרגיל לבלטה">
 <pre>[img[pictures/targil-lebalata.jpg]]
 
 !!![[אירי]]:
