הארי דין סטנטון, שרלה הייתה אוהבת את זה - תמונה חדשה, איילה מלאך פיינס, נשמה, הכחול כבר כאן ועוד

--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@ Error message and password prompt
 
 <li>איזדורה דאנקן</li>
 
+<li>איילה מלאך פיינס</li>
+
 <li>אימא מהאגדות</li>
 
 <li>אימא שלי</li>
@@ -449,6 +451,8 @@ Error message and password prompt
 
 <li>האסיפה הראשונה</li>
 
+<li>הארי דין סטנטון</li>
+
 <li>הברמנית</li>
 
 <li>הגשר</li>
@@ -470,6 +474,8 @@ Error message and password prompt
 <li>החיים נועדו למי שלא יכול להתמודד עם סמים</li>
 
 <li>היועצת</li>
+
+<li>הכחול כבר כאן</li>
 
 <li>הכפר הגלובלי</li>
 
@@ -615,6 +621,8 @@ Error message and password prompt
 
 <li>מחפשת את אירי</li>
 
+<li>מטא בדיון</li>
+
 <li>מיזונפלציה</li>
 
 <li>מימי של אלפרד</li>
@@ -664,6 +672,8 @@ Error message and password prompt
 <li>נאמני הגנזך</li>
 
 <li>נדיה</li>
+
+<li>נשמה</li>
 
 <li>סבתא שלנו</li>
 
@@ -8704,7 +8714,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="סולטנה [[סולטנה ויסמין]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[איילה מלאך פיינס]] [[הארי דין סטנטון]] אלה [[גבר פריבילגי]] [[שרלה הייתה אוהבת את זה]] [[הכחול כבר כאן]] [[אחיות חוץ]] HH [[מטא בדיון]] נשמה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8724,7 +8734,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170907181236561" title="$:/temp/search">
+<div created="20161023184814872" modified="20170918170930797" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8882,7 +8892,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 גם בדף כזה אפשר להכניס פיסקה מימין לשמאל.
 @@</pre>
 </div>
-<div created="20161024200912852" modified="20170508145654960" tags="" title="HH">
+<div created="20161024200912852" modified="20170918170551322" tags="[[מטא בדיון]]" title="HH">
 <pre>! Happy Hour
 
 !!![[גורה]]: 
@@ -9477,7 +9487,7 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[אחות כהן]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170415105721479" modified="20170817163255963" tags="[[קופים ממונעים]]" title="אחיות חוץ">
+<div created="20170415105721479" modified="20170918164216958" tags="[[קופים ממונעים]]" title="אחיות חוץ">
 <pre>[img[pictures/ahayot-huz.jpg]]
 
 !!![[גורה]]:
@@ -9515,6 +9525,21 @@ well,
 
 
 [[איזדורה דאנקן|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%96%D7%93%D7%95%D7%A8%D7%94_%D7%93%D7%90%D7%A0%D7%A7%D7%9F]] לא אהבה את קשיחות הטכניקה של המחול הקלאסי, ואת התכחשותו לכח הכבידה. היא טענה כי הוא מגביל את יכולת הביטוי שלה. היא הסירה את נעלי הריקוד, ונתנה לתנועות ולקשר עם האדמה לקחת את הגוף - וכל זה בתחילת המאה ה-20, ועוד לא דיברנו על חייה האישיים של האישה המהפכנית הזו.
+
+</pre>
+</div>
+<div created="20170914175036224" modified="20170918123520836" tags="[[אחיות חוץ]]" title="איילה מלאך פיינס">
+<pre>[img[pictures/ayala-malach-pines.jpg]]
+
+!!![[יויו]]:
+
+בתקופה שאחרי [[אלה]], הבוס שהיה לי אז, נתן לי פתק עם מספר הטלפון של [[איילה מלאך|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C%D7%94_%D7%9E%D7%9C%D7%90%D7%9A_%D7%A4%D7%99%D7%99%D7%A0%D7%A1]] ואמר: &quot;תתקשר אליה, היא פסיכולוגית רצינית, היא קולגה של אשתי, בלי פשלות&quot;.
+
+היו לי בעיות קשות לפתור באותם ימים. היה ברור שזה ייקח זמן, אך היא אמרה לי: [[הכחול כבר כאן]], והבנתי. והיום אני כבר יודע כמה היא צדקה.
+
+בהשראתה נולדה [[נשמה]].
+
+
 
 </pre>
 </div>
@@ -9639,12 +9664,12 @@ well,
 
 </pre>
 </div>
-<div created="20161115182456203" modified="20170729113123398" title="אלה">
+<div created="20161115182456203" modified="20170918123716755" title="אלה">
 <pre>[img[pictures/ela.jpg]]
 
 !!![[יויו]]:
 
-אני זה שהפך את אווה, לזו שכותבת את מה שאני מספר לה, ולכן אעתיק לכאן את מה שאווה כתבה על פי מה שסיפרתי לה, כשהגיע אלי לפריז ב 22 בדצמבר 2015 [[בכוכב המשאלות בעל תשע הצלעות|כוכב המשאלות בעל תשע הצלעות]]
+אני זה שהפך את אווה, לזו שכותבת את מה שאני מספר לה, ולכן אעתיק לכאן את מה שאווה כתבה על פי מה שסיפרתי לה, כשהגיעה אלי לפריז ב 22 בדצמבר 2015 [[בכוכב המשאלות בעל תשע הצלעות|כוכב המשאלות בעל תשע הצלעות]]
 
 בתקופה של יפו עבדתי באולפני עריכה בצד המזרחי של תל אביב, היה לי קטנוע וחייתי טוב ולא קרה בה שום דבר ראוי לאזכור עד שהגיעה פרשת גורה והנה אנחנו יושבים כאן. אבל אני רוצה לספר רגע סיפור אחר שיביא אותנו בסופו של דבר לימי יפו. זה היה לפני 13 שנים. גם אז הייתי טכנאי סאונד. הרווחתי אחלה. הספיק כזה לבילויים והכול. הייתי גם שם בצד. עבדתי והיה לי טוב יחסית. מאז שהשתחררתי מהצבא זה מה שעשיתי וכל פעם הייתה לי חברה אחרת לאיזו תקופה. מהחברה האחרונה שהייתה לי עד לאז נפרדתי שנה לפני אותו יום ולאחר שחייתי אתה חמש שנים כמעט ובאמת חשבתי שהייתי אז בשיא שלי. ואז יום אחד [[תומר]] חבר שלי ואני הלכנו לבית קפה בדיזנגוף. אני הייתי אמור להתחיל לעבוד בארבע והיה שתיים בצהריים. הלכנו להתעורר לאטנו, ממש כמו שאני ואת עכשיו כאן בפריז. ככה בעודנו מתעוררים, ואני שעון לגמרי, עיניי עצומות ואני שומע קול עמוק של אישה צעירה. עוד לא קלטתי שהיא אומרת שלום לתומר, ואני פוקח את העיניים, מולי עומדת יפהפייה גבוהה כהה, עיניים שחורות כהות ממש, שיער שחור חלק, היא מביטה בי ומיד אני חושק בה. היא לא התפתלה, היא מיד שלחה אלי יד והציגה את עצמה. אלה. אמרה בקול עמוק. אני תפסתי את החרמנות של החיים, זה במבט אחורנית אני אומר לך, באותו הרגע סתם לא יכולתי לנתק ממנה את המבט, ואז היא ותומר אמרו כמה מילות נימוסים והיא חזרה לשבת עם אחיה. מיד שאלתי את תומר אם הוא מרשה לי להתחיל אתה. תשמע, הוא אמר לי, זאתי נראית לי מסוכנת, אבל סקסית, אין מה להגיד, תהנה אחי, אני לא ממש מכיר אותה, יצא לי לראות אותה כמה פעמים אצל דני. אז כתבתי לה פתק קטן וביקשתי מתומר שייתן לה אותו. משהו כמו שבועיים אחר כך נפגשנו. היא כמובן נהנתה למהמה את הפגישה כי הייתה.. את יודעת... אישה כזו. גורה ואני קוראים לנשים שכמותה ב[[סדרה שכתבנו האחיות K|HH]]. היא לא עונה לכל הקריטריונים של אחות K קלאסית, נניח, היא אינה לובשת בגדים סינטטיים, היא יותר בעניין של כותנה. היא מה&quot;יודעות&quot;... יודעת למה אני מתכוון? הייתה לה את כל ההתנהגות הזו של נשים שאז נמשכתי אליהן כמו זבוב לחרא. סתם. סליחה. תמיד המשפט הזה יוצא לי. גם היום יש לי דיאלוג לא גמור עם הנשים שאני נמשך אליהן וזה בכלל לא עניין אותי באותו רגע. חשבתי... את יודעת... שאני מעל הדברים. זה נורא מצחיק אותי כי עבדתי עם איזו חמורה אחת שכל הזמן הייתה אומרת לי, אתה צריך להיותon top of things   והיא הכי לא הייתה ככה, החיים שלה היו בלגן איום ונורא, היא והבעל שלה היו צורחים אחד על השני כל היום כי הוא היה לפני פשיטת רגל וזה איים לה על החסכונות, והיא פתאום קלטה שעשתה דיל חרא בזה שנישאה לו. לידי היא כמובן לא העזה לומר זאת מפורשות, אך לפעמים רמזה. אז כשעבדתי אתה זו בדיוק הייתה התקופה שחשבתי גם אני שכלום לא יכול לקרות. את יודעת... מה כבר יכול לקרות... וכאמור נפגשנו. אלה ואני. הייתה בינינו התאמה פיזית מסעירה. מהרגע שהתחלנו לעשות סקס לא יכולנו להפסיק. ככה חודשים. פשוט הייתי הולך לעבודה, עובד את הזמן שצריך וזהו. והיא לא עבדה כבר אז. למדה. אבל גם.. זה היה ככה פעם וחצי לימודים בשבוע. היה לה מלא זמן פנוי. הייתי מגיע לעבודה סחוט אבל שמח מאושר. התאהבנו וחשקנו בטירוף אחד בשנייה וככה חודשים אנחנו מזדיינים כמו ארנבונים ארוכי אוזניים, לא ממהרים לשום מקום. לא ראיתי אנשים בזמן הזה. אורי מהעבודה אמר לי יום אחד, אחי, תעצור לפעמים לראות לאן הגעת. אך לא השכלתי להקשיב לו. זה מה שנקרא לא לרנדר, למרות שכמו שאת רואה אני זוכר את המשפט הזה שהוא אמר לי, עכשיו אני מבין כמה הרינדור שלי איטי. היא הייתה מתקשרת אלי לעבודה כמה פעמים רבות כל יום. בהתחלה זה היה מגניב. הייתי כולי בתשוקה ורק רציתי לאכול עוד מהגוף שלה. היא הייתה כל הזמן לוחשת לי לבוא בין שמיכותיה, ועם הזמן התחלתי להתנתק מכל מעשה. הורדתי משמרות בעבודה, שמיכותיה היו על מיטתי, היא עזבה את הדירה בה התגוררה (למה לשלם פעמיים שכר דירה.. זמזמה לי.. אם אפשר להיות מינימליסטים ורק להיות מחוברים כל היום.. ) וכל זה בתוך כדי שהיא מראה לי ומוכיחה לי כמה לא יעיל זה לצאת לעבודה, מונה בפני את כל העלויות הכרוכות ביציאה מן הבית כולל האניות שמשיטות את הבגדים שאני לובש לעבודה אותם תופרים במזרח הרחוק. היא הפסיקה ללכת ללימודים. אחרי משהו כמו חצי שנה שמתי לב שהיא שמנה. בעשרה קילו הראשונים זה היה סקסי לאללה. היה משהו נורא מושך בהתעבות הזו. אבל אז היא עלתה תוך עוד כמה חודשים עוד עשרה קילו, מיד נהינו טוטליים. עאלק טוטליים. את יודעת? יש מילים שהייתי מכניס אותן תחת ההגדרה הוצאו מהקשרן. מילים שאנשים אומרים אותן ומבינים אותן בדיוק הפוך ממה שהן באמת, כמו למשל טוטלי. אני אוהב טוטלי, או נותן את הנשמה שלי. לא רוצה את הטוטאליות שלך, אל תאהבי אותי, תשאירי את הנשמה שלך אצלך ותדאגי שתהיה שם ותאהבי אותה ואת שלי תשאירי אצלי!!!  יחד עם זאת.
 הוא חייך מהבדיחה של עצמו, החיוך הוסר, הוא הלך והרצין, פניו הלכו והרצינו. 
@@ -10070,19 +10095,19 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170829074025058" modified="20170904160527067" tags="[[אחיות חוץ]]" title="ג'יימס גנדולפיני">
+<div created="20170829074025058" modified="20170911115648297" tags="[[אחיות חוץ]]" title="ג'יימס גנדולפיני">
 <pre>[img[pictures/james-gandolfini.jpg]]
 
-[[ג'יימס גנדולפיני|http://www.imdb.com/name/nm0001254/]], נאהב אותך לנצח נצחים.
+[[ג'יימס גנדולפיני|http://www.imdb.com/name/nm0001254/]], נאהב אותך לנצח.
 
 </pre>
 </div>
-<div created="20170514214551974" modified="20170817163441756" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="גבר פריבילגי">
+<div created="20170514214551974" modified="20170918124131273" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="גבר פריבילגי">
 <pre>[img[pictures/gever-privilegy.jpg]]
 
 !!![[יויו]]:
 
-נכון, אני גבר פריבילגי, ולא שקל לי לכנות את עצמי גבר, הייתי מעדיף בחור, אך בקרוב מאד ימלאו לי 38.
+נכון, אני גבר פריבילגי, ולא שקל לי לכנות את עצמי גבר, הייתי מעדיף בחור, אך בקרוב מאד ימלאו לי 40.
   
 אינני מתנצל על כך, שאני גבר פריבילגי. אינני חמדן. אני לא בודק מה יש לאחרים.
 
@@ -10844,7 +10869,7 @@ Is where I want to be
 
 דיור מוגז [[שבמצפה ראשית|מצפה ראשית]], הוא הפנינה, שהגיעה תודות לצינור של [[אסדת טתיס|ים טתיס]].</pre>
 </div>
-<div created="20170829174937405" modified="20170906175656381" tags="[[אחיות חוץ]]" title="דייויד צ'ייס">
+<div created="20170829174937405" modified="20170911114604348" tags="[[אחיות חוץ]]" title="דייויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
 
 !!![[יויו]]:
@@ -10857,9 +10882,7 @@ Is where I want to be
 different tastes, but there were things we both love: family, work, people in all their imperfection, food, alcohol, talking, rage and a desire to bring the whole structure crashing down.
 @@
 
-וכן, רק לא מזמן הבנתי [[שדייויד צ'ייס|http://www.imdb.com/name/nm0153740/]], שיצר את [[הסופרנוס]], הוא אותו דייויד צ'ייס של [[חשיפה לצפון|חשיפה לצפון]].
-
-מודים לך דייויד. 
+וכן, תודות [[לאנג'ליק|אנג'ליק]], שהדביקה אותי בחיידק הסופרנוס, רק לאחרונה הבנתי, [[שדייויד צ'ייס|http://www.imdb.com/name/nm0153740/]], שיצר את [[הסופרנוס]], הוא אותו דייויד צ'ייס של [[חשיפה לצפון|חשיפה לצפון]], ואני אוהב אותו כאח.
 
 </pre>
 </div>
@@ -11029,6 +11052,13 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
+<div created="20170918121843399" modified="20170918122618754" tags="[[אחיות חוץ]]" title="הארי דין סטנטון">
+<pre>[img[pictures/harry-dean-stanton.jpg]]
+
+!!![[יויו]]:
+
+[[אתמול|https://www.theguardian.com/film/2017/sep/15/harry-dean-stanton-actor-dies-paris-texas-alien-repo-man]] הלך לעולמו [[הארי דין סטנטון|http://www.imdb.com/name/nm0001765/]], שבשבילי הוא היה, יותר מכל, טראוויס, [[מפריז-טקסס|http://www.imdb.com/title/tt0087884/?ref_=nmbio_mbio]].</pre>
+</div>
 <div created="20161217141221233" modified="20170507181732133" tags="HH" title="הברמנית">
 <pre>[img[pictures/9q6T8aBMBF8FbdcN.JPG]]
 
@@ -11169,6 +11199,17 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 היא קיי מלידה, שמה המלא הוא סיגלית קלמן.  
 
 היא רזה מאוד, ובבעלותה חתול מצרי שנמצא אתה כל הזמן. היא נטשה קריירה בעסקי הנדל&quot;ן שלא הייתה לטובת &quot;האור&quot;.  גרושה גועל נפש.</pre>
+</div>
+<div created="20170916144114074" modified="20170918163804136" tags="[[סיפורים אמיתיים]]" title="הכחול כבר כאן">
+<pre>[img[pictures/hacachol-cvar-can.jpg]]
+
+!!![[יויו]]:
+
+אני מחלק את החיים שלי לשלושה: עד [[אלה]], אחרי אלה ופריז. עד אלה הייתי תם עם פחד מוצפן, עם אלה ועד תקופה די ארוכה אחרי אך בצורות שונות הייתי תם ומפחד. בפריז אני מתחיל להפשיר.
+
+
+זה לא שאין יותר פחד, קושי, צער, עצב וכעס. הלב כואב לא פעם - [[אבל הכחול כבר כאן|https://www.youtube.com/watch?v=eBdKX3qfyQk]].
+</pre>
 </div>
 <div created="20161217212236965" modified="20170817163705607" tags="[[אירי וגורה]] [[קופים ממונעים]]" title="הכפר הגלובלי">
 <pre>[img[pictures/hacfar-haglobaly.jpg]]
@@ -12266,6 +12307,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[מחפשת את אירי]]&quot;&gt;&gt;</pre>
 </div>
+<div created="20170918165813987" modified="20170918200046800" tags="[[סיפורים אמיתיים]]" title="מטא בדיון">
+<pre>[img[pictures/meta-fiction.jpg]]
+
+!!![[יויו]]:
+
+החלטתי שהסרטונים שהתחלתי לעשות הם [[metafiction|https://en.wikipedia.org/wiki/Metafiction]], ובכל מקרה אני במינימום wannabe
+
+&lt;&lt;list-links filter:&quot;[tag[מטא בדיון]]&quot;&gt;&gt;
+
+</pre>
+</div>
 <div created="20170112174310883" modified="20170719152655052" tags="[[המטבח על פי ז'נבייב]]" title="מיזונפלציה">
 <pre>[img[pictures/5w7PxVmJQ0wK3AoL.jpg]]
 
@@ -12575,6 +12627,19 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 האחות הבכורה והביולוגית של גורה ושלי.</pre>
 </div>
+<div created="20170914191116661" modified="20170918200704364" tags="[[מטא בדיון]]" title="נשמה">
+<pre>[img[pictures/neshama.jpg]]
+
+!!![[יויו]]:
+
+נשמה - soul, נפטרה  לפני כמה שנים, וביקשה לא להיוולד בינתיים. היא מחכה לימים של אחרי מלחמת העולם הבאה. בקשתה של נשמה אושרה, ובינתיים היא מסייעת לנשמות שלא רוצות לבוא שוב לעולם הזה, למצוא מקום מיטבי להיוולד בו. כמו כן היא משמשת, כמלאך שומר מחליף.
+
+
+&lt;&lt;list-links filter:&quot;[tag[נשמה]]&quot;&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20170629191152497" modified="20170629210039960" tags="[[משפחת באומן]]" title="סבתא שלנו">
 <pre>[img[pictures/savta-shelanu.jpg]]
 
@@ -12617,8 +12682,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;list-links filter:&quot;[tag[סולטנה]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20170908140800978" modified="20170908165437244" tags="סולטנה" title="סולטנה ויסמין">
-<pre>
-[img[pictures/sultana-veyasmin.jpg]]
+<pre>[img[pictures/sultana-veyasmin.jpg]]
 
 !!![[יויו]]:
 
@@ -13033,8 +13097,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20170908141536225" modified="20170908145320805" tags="סולטנה [[חיות אוכל]]" title="עוגת סולת">
-<pre>
-[img[pictures/ugat-solet.jpg]]
+<pre>[img[pictures/ugat-solet.jpg]]
 
 
 
@@ -14670,10 +14733,9 @@ Fapina''
 //
 ברשותך, אני מבינה שזה עוד לא הזמן שלי להעיר הערות, אבל דבר אחד, לא מפריע לי כובע או לא כובע, אבל אי אפשר שהשערות של החברה יטבלו באוכל ויתרוצצו על הפנים - במטבח משאירים את השערות מאחור, אני בעד קשתות.//</pre>
 </div>
-<div created="20161113183624587" modified="20170507221601208" title="שרלה הייתה אוהבת את זה">
-<pre>[img[pictures/bEhhnCTBucJG9v6o.JPG]]
-''
-שרה'לה היתה אוהבת את זה''
+<div created="20161113183624587" modified="20170918163228546" tags="[[אחיות חוץ]]" title="שרלה הייתה אוהבת את זה">
+<pre>[img[pictures/sarale-hayta.jpg]]
+
 
 [[מילים ולחן: מאיר אריאל|https://www.youtube.com/watch?v=86rhzXjYzJg]]
 
