--- a/index.html
+++ b/index.html
@@ -12307,12 +12307,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[מחפשת את אירי]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170918165813987" modified="20170918200934615" tags="[[סיפורים אמיתיים]]" title="מטא בדיון">
+<div created="20170918165813987" modified="20170919035013381" tags="[[סיפורים אמיתיים]]" title="מטא בדיון">
 <pre>[img[pictures/meta-fiction.jpg]]
 
 !!![[יויו]]:
 
-החלטתי שהסרטונים שהתחלתי לעשות הם [[metafiction|https://en.wikipedia.org/wiki/Metafiction]], ובכל מקרה אני  wannabe
+החלטתי שהסרטונים שהתחלתי לעשות יחשבו [[metafiction|https://en.wikipedia.org/wiki/Metafiction]],
 
 &lt;&lt;list-links filter:&quot;[tag[מטא בדיון]]&quot;&gt;&gt;
 
