--- a/index.html
+++ b/index.html
@@ -8714,7 +8714,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מטא בדיון]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הכחול כבר כאן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11200,12 +11200,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 היא רזה מאוד, ובבעלותה חתול מצרי שנמצא אתה כל הזמן. היא נטשה קריירה בעסקי הנדל&quot;ן שלא הייתה לטובת &quot;האור&quot;.  גרושה גועל נפש.</pre>
 </div>
-<div created="20170916144114074" modified="20170918163804136" tags="[[סיפורים אמיתיים]]" title="הכחול כבר כאן">
+<div created="20170916144114074" modified="20170919035546744" tags="[[סיפורים אמיתיים]]" title="הכחול כבר כאן">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
 
 !!![[יויו]]:
 
-אני מחלק את החיים שלי לשלושה: עד [[אלה]], אחרי אלה ופריז. עד אלה הייתי תם עם פחד מוצפן, עם אלה ועד תקופה די ארוכה אחרי אך בצורות שונות הייתי תם ומפחד. בפריז אני מתחיל להפשיר.
+אני מחלק את החיים שלי לשלושה: עד [[אלה]], אחרי אלה ופריז. עד אלה הייתי תם עם פחד מוצפן, עם אלה ועד תקופה די ארוכה אחרי  הייתי תם ומפחד. בפריז זה אחרת.
 
 
 זה לא שאין יותר פחד, קושי, צער, עצב וכעס. הלב כואב לא פעם - [[אבל הכחול כבר כאן|https://www.youtube.com/watch?v=eBdKX3qfyQk]].
