--- a/index.html
+++ b/index.html
@@ -11200,12 +11200,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 היא רזה מאוד, ובבעלותה חתול מצרי שנמצא אתה כל הזמן. היא נטשה קריירה בעסקי הנדל&quot;ן שלא הייתה לטובת &quot;האור&quot;.  גרושה גועל נפש.</pre>
 </div>
-<div created="20170916144114074" modified="20170919035546744" tags="[[סיפורים אמיתיים]]" title="הכחול כבר כאן">
+<div created="20170916144114074" modified="20170919040050640" tags="[[סיפורים אמיתיים]]" title="הכחול כבר כאן">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
 
 !!![[יויו]]:
 
-אני מחלק את החיים שלי לשלושה: עד [[אלה]], אחרי אלה ופריז. עד אלה הייתי תם עם פחד מוצפן, עם אלה ועד תקופה די ארוכה אחרי  הייתי תם ומפחד. בפריז זה אחרת.
+אני מחלק את החיים שלי לשלושה: עד [[אלה]], אחרי אלה ופריז. עד אלה הייתי תם עם פחד מוצפן, אחרי אלה הייתי תם ומפחד. בפריז זה אחרת.
 
 
 זה לא שאין יותר פחד, קושי, צער, עצב וכעס. הלב כואב לא פעם - [[אבל הכחול כבר כאן|https://www.youtube.com/watch?v=eBdKX3qfyQk]].
