שרלה הייתה אוהבת את זה

--- a/index.html
+++ b/index.html
@@ -8714,7 +8714,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הכחול כבר כאן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[שרלה הייתה אוהבת את זה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -14733,7 +14733,7 @@ Fapina''
 //
 ברשותך, אני מבינה שזה עוד לא הזמן שלי להעיר הערות, אבל דבר אחד, לא מפריע לי כובע או לא כובע, אבל אי אפשר שהשערות של החברה יטבלו באוכל ויתרוצצו על הפנים - במטבח משאירים את השערות מאחור, אני בעד קשתות.//</pre>
 </div>
-<div created="20161113183624587" modified="20170918163228546" tags="[[אחיות חוץ]]" title="שרלה הייתה אוהבת את זה">
+<div created="20161113183624587" modified="20170919125204222" tags="[[אחיות חוץ]]" title="שרלה הייתה אוהבת את זה">
 <pre>[img[pictures/sarale-hayta.jpg]]
 
 
@@ -14746,10 +14746,12 @@ Fapina''
 עגלה על הגשר.
 העשב נוצץ.
 
+
 מגבעות ומטפחת.
 ושד מתרוצץ:
 &quot;בואי בואי ליער,&quot;
 אומר וקורץ.
+
 
 צחקה צחקה
 עת חלף בה החץ...
