--- a/index.html
+++ b/index.html
@@ -8714,7 +8714,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[שרלה הייתה אוהבת את זה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מטא בדיון]] [[הכחול כבר כאן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12307,12 +12307,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[מחפשת את אירי]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170918165813987" modified="20170919035013381" tags="[[סיפורים אמיתיים]]" title="מטא בדיון">
+<div created="20170918165813987" modified="20170919144514336" tags="[[סיפורים אמיתיים]]" title="מטא בדיון">
 <pre>[img[pictures/meta-fiction.jpg]]
 
 !!![[יויו]]:
 
-החלטתי שהסרטונים שהתחלתי לעשות יחשבו [[metafiction|https://en.wikipedia.org/wiki/Metafiction]],
+החלטתי שהסרטונים שהתחלתי לעשות, יכולים להחשב [[metafiction|https://en.wikipedia.org/wiki/Metafiction]],
 
 &lt;&lt;list-links filter:&quot;[tag[מטא בדיון]]&quot;&gt;&gt;
 
