--- a/index.html
+++ b/index.html
@@ -8722,7 +8722,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="הסופרנוס" title="$:/StoryList">
+<div list="[[מרק עם קניידלך]] [[דייויד צ'ייס]] [[איילה מלאך פיינס]] [[טוני סופרנו]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9536,7 +9536,7 @@ well,
 
 </pre>
 </div>
-<div created="20170914175036224" modified="20170922141857675" tags="[[אחיות חוץ]]" title="איילה מלאך פיינס">
+<div created="20170914175036224" modified="20170924205930054" tags="[[אחיות חוץ]]" title="איילה מלאך פיינס">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
 
 !!![[יויו]]:
@@ -9545,7 +9545,7 @@ well,
 
 היו לי בעיות קשות לפתור באותם ימים, והיא תמיד הקשיבה, חייכה והבינה. היה ברור שזה ייקח זמן, אך במבט מלטף היא אמרה לי: [[הכחול כבר כאן]], והבנתי. והיום אני כבר יודע כמה היא צדקה.
 
-בהשראתה נולדה [[נשמה]].
+בהשראתה נולדה [[נשמה]]. יהי זיכרה ברוך.
 
 
 
@@ -12600,8 +12600,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170924155536957" modified="20170924204726080" tags="[[חיות אוכל]]" title="מרק עם קניידלך">
-<pre>[img[pictures/marak-im-kneydalach.jpg]]ד
+<div created="20170924155536957" modified="20170924210919357" tags="[[חיות אוכל]]" title="מרק עם קניידלך">
+<pre>[img[pictures/marak-im-kneydalach.jpg]]
 
 !!![[יויו]]:
 
